<resources>
    <string name="app_name">Airneis</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Accueil</string>
    <string name="title_categories">Catégories</string>
    <string name="title_basket">Panier</string>
    <string name="title_account">Mon compte</string>
    <string name="yourBasket">Votre Panier</string>
    <string name="totalPrice">Prix Total</string>
    <string name="VAT">TVA</string>
    <string name="placeOrder">Passer la commande</string>
    <string name="quantity">Quantité</string>
    <string name="price">Prix</string>
    <string name="delete">Supprimer</string>
    <string name="connexion">Connexion</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="no_account_register">Pas de compte ? Inscrivez-vous</string>
    <string name="have_account_login">Déjà un compte ? Connectez-vous</string>
    <string name="login">Se connecter</string>
    <string name="register">Inscription</string>
    <string name="image_desc">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="search_sort">
        <item>Aucun tri</item>
        <item>Nom (asc)</item>
        <item>Nom (desc)</item>
        <item>Prix (asc)</item>
        <item>Prix (desc)</item>
        <item>Quantité en stock (asc)</item>
        <item>Quantité en stock (desc)</item>
    </string-array>
</resources>