<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_fab"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/baseline_contact_support_24"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_account" />

</menu>