<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf0f1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail *"
            android:maxLength="50"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mot de passe *"
            android:maxLength="30"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_eye"
            android:drawablePadding="16dp"
            android:padding="12dp"
            android:background="@drawable/input_background"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_register"
            android:textColor="@color/colorAccent"
            android:layout_gravity="end"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>